# mermaider

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  action.yaml  mypy.ini  pyproject.toml
.circleci/: config.yml
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: codecov-report.yaml  codecov.yaml  codeql-analysis.yaml  stale.yml
.hooks/: poetry_lock.sh  update_requirements.sh
coverage/: junit.xml
coverage/reports/: report.xml
mermaider/: file.py
scripts/: clean.sh
tests/: test_example.py
