[tool.poetry]
name = "mermaider"
version = "0.1.0"
description = "GitHub action to automatically create & update Mermaid diagrams in markdown files"
authors = ["Tom <github@tom-ac.dev>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
