[tool.poetry]
name = "mermaider"
version = "0.1.0"
description = "GitHub action to automatically create & update Mermaid diagrams in markdown files"
authors = ["Tom <github@tom-ac.dev>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.940"
black = "^22.1.0"
pytest = "^7.1.0"
prospector = "^1.7.7"
pre-commit = "^2.17.0"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
